ipc/ipdl/test/ipdl/error/multimanNonexistentMgrs.ipdl
//error: protocol `Starsky' referenced as |manager| of `multimanNonexistentMgrs' has not been declared
//error: protocol `Hutch' referenced as |manager| of `multimanNonexistentMgrs' has not been declared

protocol multimanNonexistentMgrs {
    manager Starsky or Hutch;

child:
    async Dummy();
    async __delete__();
};
